--- a/PeluGestor/Views/ReservasView.xaml
+++ b/PeluGestor/Views/ReservasView.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="PeluGestor.Views.ReservasView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             Loaded="UserControl_Loaded">
     <DockPanel Margin="10">
 
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" VerticalAlignment="Center">
@@ -24,7 +25,7 @@
 
             <Button Content="Nueva" Width="110" Margin="12,0,0,0" Click="btnNueva"/>
             <Button Content="Editar" Width="110" Margin="6,0,0,0" Click="btnEditar"/>
-            <Button Content="Cancelar" Width="110" Margin="6,0,0,0" Click="btnEliminar"/>
+            <Button Content="Cancelar" Width="110" Margin="6,0,0,0" Click="btnCancelar"/>
         </StackPanel>
 
         <DataGrid x:Name="Grid"
