--- a/PeluGestor/Dialogs/PeluqueriaDialog.xaml
+++ b/PeluGestor/Dialogs/PeluqueriaDialog.xaml
@@ -46,12 +46,14 @@
 
             <Button x:Name="BtnCancelar"
                     Content="Cancelar"
+                    IsCancel="True"
                     Width="110"
                     Margin="0,0,8,0"
                     Click="btnCancelar"/>
 
             <Button x:Name="BtnGuardar"
                     Content="Guardar"
+                    IsDefault="True"
                     Width="110"
                     Click="btnGuardar"/>
         </StackPanel>
