--- a/PeluGestor/Dialogs/ServicioDialog.xaml
+++ b/PeluGestor/Dialogs/ServicioDialog.xaml
@@ -76,12 +76,14 @@
 
             <Button x:Name="BtnCancelar"
                     Content="Cancelar"
+                    IsCancel="True"
                     Width="110"
                     Margin="0,0,8,0"
                     Click="btnCancelar"/>
 
             <Button x:Name="BtnGuardar"
                     Content="Guardar"
+                    IsDefault="True"
                     Width="110"
                     Click="btnGuardar"/>
 
